--- a/src/app/ui/components/breadcrumb/breadcrumb.component.scss
+++ b/src/app/ui/components/breadcrumb/breadcrumb.component.scss
@@ -8,9 +8,16 @@
 
   .breadcrumb-item {
     &:not(:last-child)::after {
-      content: ">";
-      padding: 0 0.5rem;
-      color: #a5aaaf;
+      content: "";
+      display: inline-block;
+      width: 16px;
+      height: 16px;
+      vertical-align: middle;
+      margin: 0 0.5rem;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23a5aaaf' class='bi bi-chevron-right' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708'/%3E%3C/svg%3E");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
     }
 
     &::before {
@@ -30,6 +37,6 @@
   }
 
   .active {
-    color: rgb(80 98 116 / 75%);;
+    color: rgb(80 98 116 / 75%);
   }
 }
