--- a/src/app/ui/components/order/order.component.html
+++ b/src/app/ui/components/order/order.component.html
@@ -3,6 +3,12 @@
   <app-navbar></app-navbar>
 
   <div class="container">
+    <div class="breadcrumb-container">
+      <div class="row mb-3">
+        <div class="col-12">
+          <app-breadcrumb></app-breadcrumb>
+        </div>
+      </div>
     <div class="row">
       <!-- Sidebar -->
       <div class="col-lg-3 d-none d-lg-block">
