--- a/src/app/ui/components/login/login.component.scss
+++ b/src/app/ui/components/login/login.component.scss
@@ -12,263 +12,226 @@ $hover-color: rgba($primary-color, 0.1);
 $success-color: #059669;
 $link-color: #0000ee;
 
-.text-center {
-    background-color: #f5f5f5;
-  }
-  
-  .form-signup input[type="username"] {
-    margin-bottom: 1px;
-    border-bottom-right-radius: 6;
-    border-bottom-left-radius: 6;
-  }
-  
-  
-  .loginform {
-    margin-top: 50px;
-    width: fit-content;
-    height: fit-content;
-    display: inline-flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    gap: 15px;
-    padding: 50px 40px 20px 40px;
-    background-color: #ffffff;
-    -webkit-box-shadow: 0px 106px 42px rgba(0, 0, 0, 0.01),
-      0px 59px 36px rgba(0, 0, 0, 0.05), 0px 26px 26px rgba(0, 0, 0, 0.09),
-      0px 7px 15px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
-            box-shadow: 0px 106px 42px rgba(0, 0, 0, 0.01),
-      0px 59px 36px rgba(0, 0, 0, 0.05), 0px 26px 26px rgba(0, 0, 0, 0.09),
-      0px 7px 15px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
-    border-radius: 11px;
-    font-family: "Inter", sans-serif;
-  }
-  
-  .logo_container {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    width: 80px;
-    height: 80px;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, rgba(248, 248, 248, 0)), to(#F8F8F888));
-    background: linear-gradient(180deg, rgba(248, 248, 248, 0) 50%, #F8F8F888 100%);
-    border: 1px solid #F7F7F8;
-    -webkit-filter: drop-shadow(0px 0.5px 0.5px #EFEFEF) drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
-            filter: drop-shadow(0px 0.5px 0.5px #EFEFEF) drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
-    border-radius: 11px;
-  }
-  
-  .title_container {
-    display: -webkit-box;
-    display: -ms-flexbox;
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
+
+.login-container {
+    margin-top: 40px;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    gap: 10px;
-  }
-  
-  .title {
-    margin: 0;
-    font-size: 1.25rem;
-    font-weight: 700;
-    color: #212121;
-  }
-  
-  .subtitle {
-    font-size: 0.725rem;
-    max-width: 80%;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 20px;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
     text-align: center;
-    line-height: 1.1rem;
-    color: #8B8E98
-  }
-  
-  .input_container {
+    margin-bottom: 20px;
     width: 100%;
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    gap: 5px;
-  }
-  
-  .icon {
-    width: 20px;
-    position: absolute;
-    z-index: 99;
-    left: 12px;
-    bottom: 9px;
-  }
-  
-  .input_label {
-    font-size: 0.75rem;
-    color: #8B8E98;
-    font-weight: 600;
-  }
-  
-  .input_field {
-    width: auto;
-    height: 40px;
-    padding: 0 0 0 40px;
-    border-radius: 7px;
-    outline: none;
-    border: 1px solid #e5e5e5;
-    -webkit-filter: drop-shadow(0px 1px 0px #efefef)
-      drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
-            filter: drop-shadow(0px 1px 0px #efefef)
-      drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
-    -webkit-transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
-    transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
-  }
-  
-  .input_field:focus {
-    border: 1px solid transparent;
-    -webkit-box-shadow: 0px 0px 0px 2px #242424;
-            box-shadow: 0px 0px 0px 2px #242424;
-    background-color: transparent;
-  }
-  
-  .sign-in_btn {
+    max-width: 600px;
+
+    .logo-image {
+        height: 80px;
+        width: auto;
+        margin: 0 10px;
+        object-fit: contain;
+
+        @media (max-width: 480px) {
+            height: 60px;
+        }
+    }
+
+    .logo-subtext {
+        font-style: italic;
+        color: $text-color;
+        margin: 10px;
+        font-size: 1rem;
+        white-space: nowrap;
+
+        @media (max-width: 480px) {
+            font-size: 0.9rem;
+            margin: 5px;
+            width: 100%;
+            text-align: center;
+        }
+    }
+
+    @media (max-width: 480px) {
+        flex-direction: column;
+        gap: 10px;
+    }
+}
+
+.loginform {
     width: 100%;
-    height: 42px;
-    border: 0;
-    border-radius: 5px;
-    background-color: rgb(255, 102, 0);
-    outline: none;
-    color: #ffffff;
-    filter: drop-shadow(0px 1px 0px #efefef) drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
-    cursor: pointer;
-  }
-  
-  .fb-login-button2 {
-    width: 400px ;
-    height: 40px;
-    background: #ffffff;
-    border-radius: 5px;
-    outline: none;
-    color: #000000;
-    border: 1px solid #e5e5e5;
-    -webkit-filter: drop-shadow(0px 1px 0px #efefef)
-      drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
-            filter: drop-shadow(0px 1px 0px #efefef)
-      drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
-    cursor: pointer;
-  
-  }
-  
-  
-  .fb-login-button2 span {
-    font-size: 0.85rem;
-    font-weight: 400;
-    color: #3c3e42;
-    margin-left: 10px;
-  }
-  
-  .sign-in_ggl {
-    width: 100%;
-    height: 40px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    gap: 10px;
-    background: #ffffff;
-    border-radius: 7px;
-    outline: none;
-    color: #242424;
-    border: 1px solid #e5e5e5;
-    filter: drop-shadow(0px 1px 0px #efefef) drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
-    -webkit-filter: drop-shadow(0px 1px 0px #efefef)
-      drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
-            filter: drop-shadow(0px 1px 0px #efefef)
-      drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
-    cursor: pointer;
-  }
-  
-  .sign-in_apl {
-    width: 400px;
-    height: 42px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    gap: 10px;
-    background: #212121;
-    border-radius: 5px;
-    outline: none;
-    color: #ffffff;
-    border: 1px solid #e5e5e5;
-    -webkit-filter: drop-shadow(0px 1px 0px #efefef)
-      drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
-            filter: drop-shadow(0px 1px 0px #efefef)
-      drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
-    cursor: pointer;
-  }
-  
-  .separator {
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    gap: 30px;
-    color: #8B8E98;
-  }
-  
-  .separator .line {
-    display: block;
-    width: 100%;
-    height: 1px;
-    border: 0;
-    background-color: #e8e8e8;
-  }
-  
-  .note {
-    font-size: 0.75rem;
-    color: #8B8E98;
-    text-decoration: underline;
-  }
-  .forgot-password {
-    width: 100%;
-    font-size: 13px;
+    max-width: 400px;
+    padding: 30px;
+    background-color: #ffffff;
+    border-radius: 11px;
+    box-shadow: 0px 106px 42px rgba(0, 0, 0, 0.01),
+        0px 59px 36px rgba(0, 0, 0, 0.05),
+        0px 26px 26px rgba(0, 0, 0, 0.09),
+        0px 7px 15px rgba(0, 0, 0, 0.1);
+
+    @media (max-width: 480px) {
+        padding: 20px;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+}
+
+.title_container {
+    text-align: center;
     margin-bottom: 10px;
-    color: #8B8E98;
+
+    .title {
+        font-size: 1.5rem;
+        font-weight: 700;
+        color: $text-color;
+        margin: 0;
+    }
+
+    .subtitle {
+        font-size: 0.9rem;
+        color: #666;
+        margin: 5px 0 0 0;
+
+        a {
+            color: $primary-color;
+            text-decoration: none;
+            font-weight: 500;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
+}
+
+.form-floating {
+    position: relative;
+    margin-bottom: 15px;
+
+    input {
+        width: 100%;
+        padding: 1rem 1rem 0 1rem;
+        border: 1px solid $border-color;
+        border-radius: 5px;
+        font-size: 1rem;
+        transition: all 0.3s ease;
+
+        
+    }
+
+    label {
+        color: #666;
+        &::after{
+          content: none !important;
+        }
+    }
+}
+
+.forgot-password {
     text-align: right;
-    text-decoration: underline;
+    margin: -5px 0 10px;
+
+    a {
+        color: $text-color;
+        font-size: 0.9rem;
+        text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+            color: $primary-color;
+        }
+    }
+}
+
+.btn-login {
+    width: 100%;
+    padding: 12px;
+    background-color: $primary-color;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 1rem;
+    font-weight: 500;
     cursor: pointer;
-  }
+    transition: background-color 0.3s ease;
+
+    &:hover {
+        background-color: darken($primary-color, 10%);
+    }
+}
+
+.separator {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin: 20px 0;
+
+    .line {
+        flex-grow: 1;
+        border: none;
+        height: 1px;
+        background-color: $border-color;
+    }
+
+    span {
+        padding: 0 15px;
+        color: #666;
+        font-size: 0.9rem;
+    }
+}
+
+.btn-social {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid $border-color;
+    border-radius: 5px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+    &.apple {
+        background-color: #000;
+        color: white;
+        border: none;
+
+        &:hover {
+            background-color: #333;
+        }
+    }
+
+    i {
+        font-size: 1.2rem;
+    }
+}
+
+.terms {
+    text-align: center;
+    font-size: 0.8rem;
+    color: #666;
+    margin-top: 20px;
+
+    a {
+        color: $primary-color;
+        text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
