--- a/src/app/ui/components/register/register.component.html
+++ b/src/app/ui/components/register/register.component.html
@@ -1,9 +1,7 @@
 <div class="register-container">
   <div class="logo">
-    <div class="logo-text">
-      <span class="tum">TUM</span><span class="in" translate="no">in</span>
-      <span class="logo-subtext" style=" margin-left: 10px; font-style: italic;" translate="yes">For All Industrial Products</span>
-    </div>
+    <img [src]="logoUrl" alt="Company Logo" class="logo-image">
+    <span class="logo-subtext" translate="yes">For All Industrial Products</span>
   </div>
   <div class="registerform">
     <form [formGroup]="frm" (ngSubmit)="onSubmit(frm.value)">
@@ -14,9 +12,14 @@
       <br>
 
       <div class="form-floating">
-        <input type="text" formControlName="nameSurname" class="form-control" id="nameSurname" placeholder="Full Name" 
-        [ngClass]="{'is-invalid': (component['nameSurname'].invalid && component['nameSurname'].dirty) || (submitted && component['nameSurname'].invalid),'is-valid': component['nameSurname'].valid && frm.get('nameSurname').value}">
-        <label for="nameSurname">Name Surname</label>
+        <input type="text" 
+               formControlName="nameSurname" 
+               class="form-control" 
+               id="nameSurname" 
+               
+               [ngClass]="{'is-invalid': (component['nameSurname'].invalid && component['nameSurname'].dirty) || (submitted && component['nameSurname'].invalid),
+                          'is-valid': component['nameSurname'].valid && frm.get('nameSurname').value}">
+        <label for="nameSurname">Full Name</label>
         <div class="invalid-feedback" *ngIf="component['nameSurname'].invalid && (component['nameSurname'].dirty || submitted)">
           <span *ngIf="component['nameSurname'].errors?.['required']">Full name is required.</span>
           <span *ngIf="component['nameSurname'].errors?.['minlength']">Full name must be at least 3 characters long.</span>
@@ -24,8 +27,13 @@
       </div>
 
       <div class="form-floating">
-        <input type="text" formControlName="userName" class="form-control" id="userName" placeholder="Username"
-        [ngClass]="{'is-invalid': (component['userName'].invalid && component['userName'].dirty) || (submitted && component['userName'].invalid),'is-valid': component['userName'].valid && frm.get('userName').value}">
+        <input type="text" 
+               formControlName="userName" 
+               class="form-control" 
+               id="userName" 
+               
+               [ngClass]="{'is-invalid': (component['userName'].invalid && component['userName'].dirty) || (submitted && component['userName'].invalid),
+                          'is-valid': component['userName'].valid && frm.get('userName').value}">
         <label for="username">User Name</label>
         <div class="invalid-feedback" *ngIf="component['userName'].invalid && (component['userName'].dirty || submitted)">
           <span *ngIf="component['userName'].errors?.['required']">Username is required.</span>
@@ -34,9 +42,13 @@
       </div>
 
       <div class="form-floating">
-        <input type="email" formControlName="email" class="form-control" id="email" placeholder="name@example.com"
-            [ngClass]="{'is-invalid': (component['email'].invalid && component['email'].dirty) || (submitted && component['email'].invalid),
-                                    'is-valid': component['email'].valid && frm.get('email').value}" />
+        <input type="email" 
+               formControlName="email" 
+               class="form-control" 
+               id="email" 
+               
+               [ngClass]="{'is-invalid': (component['email'].invalid && component['email'].dirty) || (submitted && component['email'].invalid),
+                          'is-valid': component['email'].valid && frm.get('email').value}">
         <label for="email">Email address</label>
         <div class="invalid-feedback" *ngIf="component['email'].invalid && (component['email'].dirty || submitted)">
           <span *ngIf="component['email'].errors?.['required']">Email is required.</span>
@@ -45,9 +57,13 @@
       </div>
 
       <div class="form-floating">
-        <input type="password" formControlName="password" class="form-control" id="password" placeholder="Password"
-          [ngClass]="{'is-invalid': (component['password'].invalid && component['password'].dirty) || (submitted && component['password'].invalid ),
-                                'is-valid': component['password'].valid && frm.get('password').value}" />
+        <input type="password" 
+               formControlName="password" 
+               class="form-control" 
+               id="password" 
+               
+               [ngClass]="{'is-invalid': (component['password'].invalid && component['password'].dirty) || (submitted && component['password'].invalid),
+                          'is-valid': component['password'].valid && frm.get('password').value}">
         <label for="password">Password</label>
         <div class="invalid-feedback" *ngIf="component['password'].invalid && (component['password'].dirty || submitted)">
           <span *ngIf="component['password'].errors?.['required']">Password is required.</span>
@@ -61,22 +77,26 @@
       </div>
 
       <div class="form-floating">
-        <input type="password" formControlName="confirmPassword" class="form-control" id="confirmPassword"
-          placeholder="Confirm Password"
-          [ngClass]="{
-                      'is-invalid': (frm.get('confirmPassword').invalid && frm.get('confirmPassword').dirty) || (submitted && frm.get('confirmPassword').invalid),
-                      'is-valid': frm.get('confirmPassword').valid && frm.get('password').value === frm.get('confirmPassword').value}" />
-        <label for="confirmPassword">Confirm Password </label>
+        <input type="password" 
+               formControlName="confirmPassword" 
+               class="form-control" 
+               id="confirmPassword"
+               
+               [ngClass]="{'is-invalid': (frm.get('confirmPassword').invalid && frm.get('confirmPassword').dirty) || (submitted && frm.get('confirmPassword').invalid),
+                          'is-valid': frm.get('confirmPassword').valid && frm.get('password').value === frm.get('confirmPassword').value}">
+        <label for="confirmPassword">Confirm Password</label>
         <div class="invalid-feedback" *ngIf="component['confirmPassword'].invalid && (component['confirmPassword'].dirty || submitted)">
           <span *ngIf="component['confirmPassword'].errors?.['required']">Please confirm your password.</span>
           <span *ngIf="component['confirmPassword'].errors?.['notSame']">Passwords do not match.</span>
         </div>
       </div>
 
-      <button type="submit" class="btn-register">Create Account</button>
+      <button type="submit" class="btn-submit">Create Account</button>
 
       <div class="separator">
+        <hr class="line">
         <span>or</span>
+        <hr class="line">
       </div>
 
       <button type="button" class="btn-social apple">
@@ -87,3 +107,4 @@
     </form>
   </div>
 </div>
+<app-downbar></app-downbar>
