--- a/src/app/ui/components/user/user.component.html
+++ b/src/app/ui/components/user/user.component.html
@@ -3,6 +3,13 @@
 <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-8">
+        <div class="breadcrumb-container">
+            <div class="row mb-3">
+                <div class="col-12">
+                    <app-breadcrumb></app-breadcrumb>
+                </div>
+            </div>
+        </div>
         <!-- <button class="sidebar-toggle d-lg-none" (click)="toggleSidebar()">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
               <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
